src/snapshots/pike__app__tests__app_render_file_input_after_handling_open_file_keybind.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                       @@                                                               "
"                                @@@        @@@@@@   @@@@@                                                               "
"                               @@@@@@@@@@@@@@@@@@@@@@@@@@                                                               "
"                            @@@@@@@@@@@@  @@@@@@@@@@ @@                                                                 "
"                         @@@@@@@@@@@  @     @@@@@@@@@                                                                   "
"               @@@@@@@@@@ @@ @@ @@   @    @@@@@@@@@@@@@@@@@@                                                            "
"            @@@   @@@@     @@@  @@@@@@@@  @@@@@     @@@@@@@@                                                            "
"            @   @@@  @  @@@@    @@@    @@@@@@@@@@@@@@@@@@@                                                              "
"            @@@@@ @ @@ @     @@@@@ @@@@   @@@@@@@@@@@@@                                                                 "
"            @@@ @@   @     @@@   @@@@@@@@@@@@@                                                                          "
"            @@  @         @@    @@@@@ @@            %%%%%%%%%%   %%%   %%%    %%%%  %%%%%%%%%%%                         "
"            @ @@      @  @@@@@@@@@ @   @            %%     %%%%  %%%   %%   %%%%    %%%                                 "
"           @@@@       @@@@@@@@     @@@ @           %%%      %%%  %%   %%% %%%%     %%%                                  "
"           @@ @     @@@@@            @@@           %%%     %%%  %%%   %%%%%%       %%%                                  "
"           @@     @@@@@@@@                         %%%%%%%%%%   %%%   %%%%%%%      %%%%%%%%%%%                          "
"            @   @@@@@@@@@@@                       %%%           %%   %%%  %%%%    %%%                                   "
"            @@ @@@    @@@@@@      @@@             %%%          %%%   %%%    %%%   %%%                                   "
"             @@@@    @@ @@@@@@@@@@@@@             %%           %%%   %%      %%%  %%%%%%%%%%%                           "
"              @@@@@    @@   @@@@@@@@                                                                                    "
"              @@  @@@@@@     @@@@@@                                                                                     "
"                        @@@@@@@@@@@                     Welcome to Pike!                                                "
"                             @@@@@@                                                                                     "
"                               @@@@           Press Ctrl + O to open a new file.                                        "
"                                              Press Ctrl + N to open a new buffer.                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"┌Enter relative file path──────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
