src/snapshots/pike__app__tests__app_render_with_search_input.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                       @@                                                               "
"                                @@@        @@@@@@   @@@@@                                                               "
"                               @@@@@@@@@@@@@@@@@@@@@@@@@@                                                               "
"                            @@@@@@@@@@@@  @@@@@@@@@@ @@                                                                 "
"                         @@@@@@@@@@@  @     @@@@@@@@@                                                                   "
"               @@@@@@@@@@ @@ @@ @@   @    @@@@@@@@@@@@@@@@@@                                                            "
"            @@@   @@@@     @@@  @@@@@@@@  @@@@@     @@@@@@@@                                                            "
"            @   @@@  @  @@@@    @@@    @@@@@@@@@@@@@@@@@@@                                                              "
"            @@@@@ @ @@ @     @@@@@ @@@@   @@@@@@@@@@@@@                                                                 "
"            @@@ @@   @     @@@   @@@@@@@@@@@@@                                                                          "
"            @@  @         @@    @@@@@ @@            %%%%%%%%%%   %%%   %%%    %%%%  %%%%%%%%%%%                         "
"            @ @@      @  @@@@@@@@@ @   @            %%     %%%%  %%%   %%   %%%%    %%%                                 "
"           @@@@       @@@@@@@@     @@@ @           %%%      %%%  %%   %%% %%%%     %%%                                  "
"           @@ @     @@@@@            @@@           %%%     %%%  %%%   %%%%%%       %%%                                  "
"           @@     @@@@@@@@                         %%%%%%%%%%   %%%   %%%%%%%      %%%%%%%%%%%                          "
"            @   @@@@@@@@@@@                       %%%           %%   %%%  %%%%    %%%                                   "
"            @@ @@@    @@@@@@      @@@             %%%          %%%   %%%    %%%   %%%                                   "
"             @@@@    @@ @@@@@@@@@@@@@             %%           %%%   %%      %%%  %%%%%%%%%%%                           "
"              @@@@@    @@   @@@@@@@@                                                                                    "
"              @@  @@@@@@     @@@@@@                                                                                     "
"                        @@@@@@@@@@@                     Welcome to Pike!                                                "
"                             @@@@@@                                                                                     "
"                               @@@@           Press Ctrl + O to open a new file.                                        "
"                                              Press Ctrl + N to open a new buffer.                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"┌Search for: ──────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
