src/snapshots/pike__app__tests__app_renders_no_file_input_after_closing.snap
---
source: src/app.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                       @@                                                               "
"                                @@@        @@@@@@   @@@@@                                                               "
"                               @@@@@@@@@@@@@@@@@@@@@@@@@@                                                               "
"                            @@@@@@@@@@@@  @@@@@@@@@@ @@                                                                 "
"                         @@@@@@@@@@@  @     @@@@@@@@@                                                                   "
"               @@@@@@@@@@ @@ @@ @@   @    @@@@@@@@@@@@@@@@@@                                                            "
"            @@@   @@@@     @@@  @@@@@@@@  @@@@@     @@@@@@@@                                                            "
"            @   @@@  @  @@@@    @@@    @@@@@@@@@@@@@@@@@@@                                                              "
"            @@@@@ @ @@ @     @@@@@ @@@@   @@@@@@@@@@@@@                                                                 "
"            @@@ @@   @     @@@   @@@@@@@@@@@@@                                                                          "
"            @@  @         @@    @@@@@ @@            %%%%%%%%%%   %%%   %%%    %%%%  %%%%%%%%%%%                         "
"            @ @@      @  @@@@@@@@@ @   @            %%     %%%%  %%%   %%   %%%%    %%%                                 "
"           @@@@       @@@@@@@@     @@@ @           %%%      %%%  %%   %%% %%%%     %%%                                  "
"           @@ @     @@@@@            @@@           %%%     %%%  %%%   %%%%%%       %%%                                  "
"           @@     @@@@@@@@                         %%%%%%%%%%   %%%   %%%%%%%      %%%%%%%%%%%                          "
"            @   @@@@@@@@@@@                       %%%           %%   %%%  %%%%    %%%                                   "
"            @@ @@@    @@@@@@      @@@             %%%          %%%   %%%    %%%   %%%                                   "
"             @@@@    @@ @@@@@@@@@@@@@             %%           %%%   %%      %%%  %%%%%%%%%%%                           "
"              @@@@@    @@   @@@@@@@@                                                                                    "
"              @@  @@@@@@     @@@@@@                                                                                     "
"                        @@@@@@@@@@@                     Welcome to Pike!                                                "
"                             @@@@@@                                                                                     "
"                               @@@@           Press Ctrl + O to open a new file.                                        "
"                                              Press Ctrl + N to open a new buffer.                                      "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                                                                                                                        "
